JWT authentication implemented

--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,25 +1,10 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-asgiref==3.11.0
-Django==6.0.1
-django-filter==25.2
-django-restframework==0.0.1
+django==6.0.1
 djangorestframework==3.16.1
-drf-yasg==1.21.14
-fastapi==0.128.1
-idna==3.11
-inflection==0.5.1
-packaging==26.0
-pillow==12.1.0
-pydantic==2.12.5
-pydantic_core==2.41.5
+djangorestframework-simplejwt==5.5.1  # Note: hyphen, not underscore!
+psycopg2-binary==2.9.11
+channels==4.3.2
+channels-redis==4.3.0
 python-decouple==3.8
-pytz==2025.2
-PyYAML==6.0.3
-sqlparse==0.5.5
-starlette==0.50.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.3
-uritemplate==4.2.0
+pillow==12.1.0
+drf-yasg==1.21.14
+django-filter==25.2
