--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,4 +1,4 @@
-django==6.0.1
+django==5.1.7
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1  # Note: hyphen, not underscore!
 psycopg2-binary==2.9.11
@@ -7,4 +7,9 @@ channels-redis==4.3.0
 python-decouple==3.8
 pillow==12.1.0
 drf-yasg==1.21.14
-django-filter==25.2
+django-filter==24.3
+python-dotenv==1.0.1
+gunicorn==21.2.0  # Production WSGI server
+psycopg2-binary==2.9.9  # PostgreSQL adapter
+dj-database-url==2.3.0  # Parse database URLs
+whitenoise==6.6.0  # Serve static files
