--- a/config/.gitignore
+++ b/config/.gitignore
@@ -1,61 +1,23 @@
-# ==========================
-# Python
-# ==========================
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-
-# ==========================
-# Virtual Environments
-# ==========================
 venv/
 env/
 .venv/
-
-# ==========================
-# Environment Variables & Secrets
-# ==========================
 .env
 .env.*
 !.env.example
-
-# ==========================
-# Database & Backups
-# ==========================
 db.sqlite3
 *.sqlite3
 backups/
-*.sql
-
-# ==========================
-# Django Media
-# ==========================
 media/
-
-# ==========================
-# IDE & Editor
-# ==========================
+staticfiles/
 .vscode/
 .idea/
 *.swp
 *.swo
-
-# ==========================
-# OS Files
-# ==========================
 .DS_Store
 Thumbs.db
-
-# ==========================
-# Logs
-# ==========================
 *.log
-
-# ==========================
-# Node / Frontend (future proof)
-# ==========================
-node_modules/
-dist/
-build/
