--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,14 +1,56 @@
+amqp==5.3.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+asgiref==3.11.0
+billiard==4.2.4
+celery==5.6.2
+channels==4.3.2
+channels_redis==4.3.0
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+dj-database-url==3.1.2
 Django==6.0.1
-djangorestframework==3.16.1
 django-filter==25.2
+django-restframework==0.0.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+dotenv==0.9.9
 drf-yasg==1.21.14
-djangorestframework-simplejwt==5.5.1
-
-psycopg2-binary==2.9.11
-redis==7.1.0
-
-python-dotenv==1.2.1
+fastapi==0.128.1
+idna==3.11
+inflection==0.5.1
+iniconfig==2.3.0
+kombu==5.6.2
+msgpack==1.1.2
+packaging==26.0
 pillow==12.1.0
-
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+PyJWT==2.11.0
 pytest==9.0.2
 pytest-mock==3.15.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+redis==7.1.0
+six==1.17.0
+sqlparse==0.5.5
+starlette==0.50.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+uritemplate==4.2.0
+vine==5.1.0
+wcwidth==0.6.0
